Made focus hightlight region calculation (outline-style:auto) multicol-aware.

Went for a very simplistic solution, at least for now. Just use the bounding
box of everything inside the multicol container.

BUG=714675

Change-Id: Ie5ca0f747edc4ac3b384ecb784443592edee7379
Reviewed-on: https://chromium-review.googlesource.com/534473
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#479406}
Former-commit-id: 10b7639ad904a2969a39781bb782118020e1fe9d